--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site-messager",
+  "name": "site-messenger",
   "version": "1.0.0",
   "description": "Very easy chat!",
   "main": "server.js",
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/Wert1209yt/Site-Messager#readme",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "cookie-parser": "^1.4.6",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   }
 }
